# Lead-Generation-Agency

./: Pasted-import-os-import-pandas-as-pd-import-random-from-datetime-import-datetime-CONFIGURATION--1752634421437_1752634421439.txt  README.md  ai_personalizer.py  app(1).py  app.py  clients(1).json  clients.html  config.py  database(1).py  deduplication(1).py  delivered_leads.json  deliveries.html  google_drive.py  index.html  lead_processor(1).py  leads_TechHirePro_20250716.csv  models(1).py  notion_crm(1).py  processed_leads_20250716_224049.json  pyproject.toml  replit.md  requirement.txt  requirements.txt  script.js  style.css  test_leads.csv  upload.html  validators(1).py
services/: __init__.py  ai_personalizer.py  email_service.py  lead_processor.py  scheduler.py
